2006-08-07  Rodrigo Moya <rodrigo@novell.com>

	Fixes #348844

	* gnome-ui-properties.desktop.in.in: fixed GNOME Bugzilla strings.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-ui-properties.desktop.in.in: don't list the Application 
	category, patch by Vincent Fretin <vincent.fretin@gmail.com> 
	(Closes: #344321)

2005-07-24  Sebastien Bacher  <seb128@debian.org>

	* gnome-ui-properties.glade: set the "is_important" property for one 
	of the buttons, so the label is showed for the "Text beside icons" mode
	(Closes: #308845).

2005-01-13  Sebastien Bacher  <seb128@debian.org>

	* gnome-ui-properties.c: (setup_dialog):
	* gnome-ui-properties.glade:
	patch from Christian - Manny Calavera - Neumair <chris@gnome-de.org>,
	add an option in the UI to activate menus accelators changes 
	(Closes: #148013). 

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-ui-properties.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install .desktop file in $(datadir)/applications
	
	* gnome-ui-properties.desktop.in: add OnlyShowIn=GNOME;

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-ui-properties.c: (setup_dialog):
	Use themed icon for window hint.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* gnome-ui-properties.c: (dialog_button_clicked_cb): Update help link
	to point to user-guide.xml
